<?xml version="1.0" encoding="utf-8"?>
    <resources>

    <!-- TEXT STYLE -->
    <string name="font_family">fonts/Ubuntu-L.ttf</string>
    <string name="button_text_color">#D6D7DA</string>

    <!-- ALERTDIALOGS -->
    <string name="oops_title">Oops!</string>
    <string name="sorry_title">We\'re Sorry!</string>
    <string name="caution_title">Caution!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="search_no_item_message">Please enter a username.</string>
    <string name="delete_confirmation">Are you sure you want to delete your account?</string>
    <string name="delete_contact_confirmation">Are you sure you want to delete this contact?</string>
    <string name="selected_file_alert_message">There was an error with the selected file. Please select a different file.</string>
    <string name="sending_message_error_alert">There was an error sending your message. Please try again!</string>
    <string name="delete_request_contact_title">We found this user in our database!</string>
    <string name="delete_request_contact_question">There either is an open request or this user is already a contact of yours. Do you want to delete the request or contact?</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="search_same_as_user">Search item is the same as current username.</string>
    <string name="add_contact_message">Are you sure you want to add contact?</string>
    <string name="delete_contact_message">Are you sure you want to delete contact?</string>
    <string name="overal_alert_message">Something went wrong, please try again.</string>
    <string name="email_error_alert">Be sure to give a valid email address!</string>
    <string name="username_error_alert">Be sure to give a username!</string>
    <string name="password_error_alert">Be sure to give a password!</string>
    <string name="username_space_alert">The username cannot contain spaces.</string>
    <string name="fill_form_alert">Please fill in the form!</string>
    <string name="update_contacts">Update Contacts</string>
    <string name="loading_account">Loading</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>

    <!-- APP STRINGS -->
    <string name="app_name">Prattle</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="email_hint">Email</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="action_logout_label">Logout</string>
    <string name="menu_delete_account">Delete Account</string>
    <string name="inbox">Inbox</string>
    <string name="contacts">Contacts</string>
    <string name="requests">Requests</string>
    <string name="no_messages">No new messages!</string>
    <string name="no_contacts">Add contacts to begin!</string>
    <string name="account_delete_success">Account successfully deleted!</string>
    <string name="account_delete_failed">Deleting account failed</string>
    <string name="search">Search</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Choose Picture</item>
    </string-array>

    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="create_directory_fail">Failed to create directory.</string>
    <string name="general_error_message">Sorry, there was an error!</string>
    <string name="indicate_video_size">The selected video must be less than 10 MB</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_selected_file_size">The selected file is too large, please select a new one.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="choose_contact_first">Choose a contact first!</string>
    <string name="action_bar_send_button">Send</string>
    <string name="message_sent">Message sent!</string>
    <string name="gallery_label">Gallery</string>
    <string name="camera_label">Camera</string>
    <string name="sending_message">Sending Message</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="title_activity_retrieve_account">Retrieve Account</string>
    <string name="hello_world">Hello world!</string>
    <string name="reset_button">Reset</string>
    <string name="email_sent_message">E-mail succesfully sent, check your inbox!</string>
    <string name="back_to_login_button">Back to Login</string>
    <string name="no_requests">No Requests</string>
    <string name="send_message">Send Message</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete_request_failed">Delete Request Failed</string>
    <string name="delete_contact_failed">Delete Contact Failed</string>
    <string name="check_no_results_found">No results found in check</string>
    <string name="request_deleted">Request Deleted</string>
    <string name="contact_deleted">Deleted Contact!</string>
    <string name="add_contact">Add Contact</string>
    <string name="delete_request">Delete Request</string>
    <string name="delete_success">Successfully Deleted!</string>
    <string name="delete_failed">Failed to Delete</string>
    <string name="request_sent">Contact Request Sent</string>
    <string name="request_sent_failed">Contact Request Failed</string>
    <string name="added_contact">Added Contact!</string>
    <string name="adding_contact_failed">Adding Contact Failed</string>
    <string name="menu_button">Menu</string>
    <string name="title_activity_view_image">Prattle</string>
    <string name="search_contacts">Search</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="send">Send</string>
    <string name="profile_other">Contact</string>
    <string name="profile_me">Me</string>

</resources>
