<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="mtolhuys.com.prattle.LoginActivity"
                android:background="@drawable/prattle_login">

    <requestFocus />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:background="@drawable/rounded_textfield"
        android:layout_above="@+id/passwordField"
        android:layout_marginBottom="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textColorHint="#b96c6079"
        android:hint="@string/username_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_textfield"
        android:layout_above="@+id/login_signup_buttons"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"
        android:textColorHint="#b96c6079"
        android:textColor="#ff30312e"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:id="@+id/forgotPasswordField"
        android:textColor="#ffdddbe0"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:layout_centerHorizontal="true"
        android:measureWithLargestChild="false"
        android:id="@+id/login_signup_buttons">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:background="@drawable/button"
            android:text="@string/login_button_label"
            android:id="@+id/loginButton"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff30312e"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:background="@drawable/button"
            android:text="@string/signup_button_label"
            android:id="@+id/signUpText"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff30312e"/>
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffdddbe0"/>

</RelativeLayout>