<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="mtolhuys.com.prattle.RetrieveAccountActivity"
                android:background="@drawable/prattle_login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_textfield"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:ems="10"
        android:id="@+id/emailField"
        android:singleLine="true"
        android:layout_above="@+id/login_validation_buttons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/login_signup_fields"
        android:hint="@string/email_hint"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:paddingTop="50dp"
        android:paddingBottom="18dp"
        android:layout_centerHorizontal="true"
        android:measureWithLargestChild="false"
        android:id="@+id/login_validation_buttons">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:id="@+id/validationButton"
            android:background="@drawable/button"
            android:text="@string/reset_button"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff30312e"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:background="@drawable/button"
            android:text="@string/back_to_login_button"
            android:id="@+id/backToLoginButton"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff30312e"/>
    </LinearLayout>

</RelativeLayout>
